--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <h2>One piece</h2>
     </head>
     <body>
-    <img width="50%" src="img.jpg">
+    <img src="img.jpg">
+    To know more about CSE click<a>About CSE</a><a href="cse.html">here</a>
     </body>
 </html>
