--- a/cse.html
+++ b/cse.html
@@ -5,5 +5,6 @@
     <body>
         <h1>It has 4 sections</h1>
         <h1>Each section has 50 members</h1>
+        to go to home click<a href="index.html">here</a>
     </body>
 </html>
