--- a/cse.html
+++ b/cse.html
@@ -6,6 +6,7 @@
         <h1>It has 4 sections</h1>
         <h1>Each section has 50 members</h1>
         to go to home click<a href="index.html">here</a>
-        <a href="https://pravallika-nvs.github.io">frnd1</a>
+        <a href="https://pravallika-nvs.github.io/intro-">frnd1</a>
+        <a href="https://maheesh12.github.io/intro">frnd2</a>
     </body>
 </html>
